fix more PMD issues #95